# hs

./: .gitignore  README.md
3/Sistemi e reti/1. C/: C.md
4/Informatica/1. Java/: Angolo.java  CD.java  CDteca.java  Calendario.java  Canzone.java  Cerchio.java  Cilindro.java  CityTemps.java  Computer.java  ContoCorrente.java  Dipendente.java  DipendenteSpecializzato.java  EuroDollaro.java  Interrogatorio.java  Libro.java  MCDmcm.java  MotherBoard.java  Persona.java  Punto.java  Rettangolo.java  Software.java  Studente.java  Studenti.java  Triangolo.java  Vettore.java  alunni.txt
4/Informatica/4. Liste/: Festa.java  FestaException.java  Invitato.java  Nodo.java
4/Informatica/5. qrcode_gui/: pyproject.toml
4/Informatica/5. qrcode_gui/qrcode_gui/: __main__.py  main.py
4/Informatica/5. qrcode_gui/qrcode_gui/utils/: gui.py  qr.py
4/Informatica/6. mcmod/: README.md  TODO.txt  build.gradle
4/Sistemi e reti/2. Wi-Fi/: Wi-Fi.md
4/Sistemi e reti/2021-09-15/: Comunicazione.md  Enti di standardizzazione.md  Stack ISO-OSI.md  Tecniche di accesso multiplo.md  Tipi di rete.md
4/Sistemi e reti/2021-09-21/: Mezzi trasmissivi.md
4/Sistemi e reti/2021-09-28/: Email.md  Overhead.md  TCP-IP.md
4/Sistemi e reti/2021-10-12/: Cablaggio strutturato.md
4/Sistemi e reti/2021-10-13/: DHCP.md
4/Sistemi e reti/2021-10-20/: Wi-Fi.md
4/Sistemi e reti/2021-10-27/: ARP.md
4/Sistemi e reti/2021-11-03/: RS232.md  SNTP.md
4/Sistemi e reti/2021-12-22/: QoS.md
5/Informatica/: Programma.md
5/Sistemi e reti/: Programma.md
5/TDP/: Programma.md
5/TDP/3. XML/: XML.md
(+529 files in other folders)
