[tool.poetry]
name = "qrcode_gui"
version = "1.0"
description = ""
authors = ["Sebastiano Barezzi <barezzisebastiano@gmail.com>"]
license = "GPL"

[tool.poetry.dependencies]
python = "^3.8"
qrcode = {extras = ["pil"], version = "^7.3.1"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
